[JENKINS-40256] temporary fix for IE11 Lato vertical alignment issue: fall back to sans-serif, as i can't stand to look at the horrible alignment any longer

--- a/less/components/button.less
+++ b/less/components/button.less
@@ -1,8 +1,6 @@
 // Mixin for generating btn styles
 .btn-styles(@btn-color; @btn-border; @btn-text; @hover-color; @active-color) {
     display: inline-block;
-    font-family: @font-family-base;
-
     border: solid 1px @btn-border;
     border-radius: 3px;
 
