--- a/less/theme.less
+++ b/less/theme.less
@@ -192,6 +192,13 @@ body {
     background-color: @body-bg;
 }
 
+.ie11({
+    // fix egregious vertical centering issue with Lato in IE11 by falling back to sans-serif
+    body {
+        font-family: sans-serif !important;
+    }
+});
+
 code, pre, kbd {
     font-family: @font-family-monospace;
 }
